--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,12 @@ language: go
 
 go:
   - 1.4
+  - 1.5
+  - 1.6
+  - 1.7
+  - 1.8
+  - 1.9
+  - tip
 
 before_install:
   - go get github.com/axw/gocov/gocov
