--- a/.travis.yml
+++ b/.travis.yml
@@ -7,9 +7,15 @@ go:
   - tip
 
 before_install:
+  - go get -u -v github.com/golang/dep/cmd/dep 
+  - dep ensure
   - go get -u -v github.com/axw/gocov/gocov
   - go get -u -v github.com/mattn/goveralls
   - go get -u -v golang.org/x/tools/cmd/cover
 
 script:
+  #  - golint `go list ./... | grep -v /vendor/`;
+  - go vet ./...;
+  - go test -race -parallel 50 -v ./...
+  - go clean && go build -ldflags="-s -w";
   - $GOPATH/bin/goveralls -service=travis-ci
