--- a/.travis.yml
+++ b/.travis.yml
@@ -13,8 +13,8 @@ before_install:
   - go get -u -v golang.org/x/tools/cmd/cover
 
 script:
-  #  - golint `go list ./... | grep -v /vendor/`;
-  - go vet `go list ./... | grep -v /vendor/`;
-  - go test -race -parallel 50 -v ./...
-  - go clean && go build -ldflags="-s -w";
+  #  - golint `go list ./... | grep -v /vendor/`
+  - go vet `go list ./... | grep -v /vendor/`
+  - go test -race -parallel 50 -v `go list ./... | grep -v /vendor/`
+  - go clean && go build -ldflags="-s -w"
   - $GOPATH/bin/goveralls -service=travis-ci
